# Super-crypto

./: .env  .env   .env.example  .gitignore  PRD.md  README.md  TODOLIST.md  justfile  pyproject.toml  实验复现与量化信号系统PRD.md  指导文章.md
configs/: autoresearch.yaml  backtest.yaml  cycle.yaml  cycle_discovery.yaml  data.yaml  data_sources.yaml  enrichment.yaml  experiment_v3.yaml  experiment_v3_full.yaml  experiment_v4a.yaml  experiment_v4a_full.yaml  experiment_v4b.yaml  experiment_v4b_full.yaml  pipeline_v4a.yaml  protected_files.yaml  scanner.yaml  scores.yaml  seed_events.yaml  splits.yaml  strategy_v3.yaml  strategy_v4a.yaml  strategy_v4b.yaml  symbols.yaml
configs/symbol_splits/: holdout.txt  train.txt  validation.txt
dashboard/: package-lock.json  package.json  tailwind.config.ts  tsconfig.json
dashboard/app/: globals.css  layout.tsx  page.tsx
docs/: 2 dashboard设计.md  6.28 执行流程图.md  7.1 指导文章详细版.md  7.2 lightGBM训练方法.md  7.3 Phase1预测实验诊断与自动扫描方案.md
tests/: conftest.py  test_autoresearch_loop.py  test_binance_ingest_resilience.py  test_cli.py  test_coinglass_reverse.py  test_config_symbols.py  test_cycle_research.py  test_cycles.py  test_experiment_store_delete.py  test_extended_research.py  test_llm_client.py  test_parameter_selection.py  test_phase1_prediction.py  test_pipeline_runner.py  test_report_api_experiments.py  test_report_api_overview.py  test_report_api_phase1.py  test_report_api_signals.py  test_report_api_symbols.py  test_report_api_trades.py  test_scanner.py  test_scores.py  test_seed_events.py  test_signals.py  test_validation.py
(+162 files in other folders)
