[build-system]
requires = ["hatchling>=1.25.0"]
build-backend = "hatchling.build"

[project]
name = "super-crypto"
version = "0.1.0"
description = "Manipulation-cycle research, backtesting, scanner, and dashboard system."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [
  { name = "Codex" }
]
dependencies = [
  "cryptography>=42.0.0",
  "duckdb>=1.0.0",
  "fastapi>=0.111.0",
  "httpx>=0.27.0",
  "jinja2>=3.1.4",
  "numpy>=2.0.0",
  "pandas>=2.2.2",
  "polars>=1.2.1",
  "pyarrow>=17.0.0",
  "pydantic>=2.8.2",
  "pydantic-settings>=2.4.0",
  "python-dateutil>=2.9.0",
  "pyyaml>=6.0.2",
  "typer>=0.12.3",
  "uvicorn>=0.30.1",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.2.2",
  "pytest-cov>=5.0.0",
  "ruff>=0.5.1",
]
research = [
  "vectorbt>=0.26.0",
  "lightgbm>=4.5.0",
]

[project.scripts]
super-crypto = "super_crypto.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/super_crypto"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]
